--- a/style.css
+++ b/style.css
@@ -246,22 +246,29 @@ body{
 
 
 
-.footer-box .form-control{
-
-     box-shadow: none;
-     border-radius: 0;
-     margin-top: 25px;
-     max-width: 250px;
+.footer-box form input{
+    height: 30px;
+    margin-bottom: 10px;
+    padding: 5px;
+    width: 75%;
+    font-size: 16px;
+    outline: none;
+    border: 1px solid #bfbfbf;
+    border-radius: 5px;
 }
 
 
-.footer-box .btn-primary{
+.footer-box form button{
 
-    box-shadow: none !important;
-    border: none;
-    border-radius: 0;
-    margin-top: 30px;
-    background-image: linear-gradient(to left, #0d0f0f,#1d3736);
+   
+  padding: 5px 5px;
+  font-size: 15px;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  border-radius: 15px;
+  background-image: linear-gradient(to left, #0d0f0f,#1d3736);
+  transition: 0.2s ease;
 
 }
 
@@ -382,7 +389,63 @@ hr{
 
   }
   
+/*-------------------------------------------------------PATTERNS-------------------------------------------------*/
+.container1 {
+    padding: 2rem 0rem;
+    margin-left: 20px;
+    margin-right: 20px;
+    border-radius: 15px;
+  }
+  
+  h4 {
+    margin: 2rem 0rem 1rem;
+  }
+  
+  .table-image {
+    td, th {
+      vertical-align: middle;
+    }
+  }
 
+
+  #patternbody{
+    background-image: linear-gradient(#c4c0c0,#c4c0c0);
+ }
+
+ .pattcontent{
+    padding-left: 25px;
+ }
+ 
+ .req{
+    padding-left: 5px;
+ }
+
+ .ptable{
+    border-color: #c4c0c0;
+    border-radius: 15px;
+ }
+
+ .ptable th{
+
+    text-align: center;
+    text-decoration:wavy;
+    -webkit-text-fill-color: #414144;
+    padding: 8px;
+    background: #e1e0e5;
+    border-radius: 15px;
+ }
+
+ .ptable td{
+
+    text-align: center;
+    text-decoration:wavy;
+    -webkit-text-fill-color: #636069;
+    padding: 8px;
+    background: #e1e0e5;
+    border-radius: 15px;
+ }
+
+ 
 
 
 
